--- a/package.json
+++ b/package.json
@@ -11,8 +11,17 @@
   "dependencies": {
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
+    "firebase": "^9.16.0",
     "next": "13.0.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "react-masonry-css": "^1.0.16",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
